--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="./index.html">
-        <img src="../..//Basket.png" alt="TNK" class="brand-logo">
+        <img src="tnk.png" alt="TNK" class="brand-logo">
         <span class="brand-text">วิทยาลัยเทคนิคนครศรีธรรมราช</span>
       </a>
       <nav class="nav">
@@ -56,7 +56,7 @@
         </div>
       </div>
       <div class="hero-media">
-        <img src="../..//win.jpg" alt="Campus" class="hero-img">
+        <img src="tnk-hero.jpg" alt="Campus" class="hero-img">
       </div>
     </div>
   </section>
@@ -122,7 +122,7 @@
     </div>
   </section>
 
-  <footer class="site-footer">
+  <footer class="site-footer" id="contact">
     <div class="container footer-grid">
       <div>
         <div class="brand-line">
