--- a/about.html
+++ b/about.html
@@ -43,13 +43,83 @@
         </ul>
       </nav>
     </div>
-  </header>  <section class="section">
-  <div class="container">
-    <h1>ข้อมูลพื้นฐาน</h1>
-    <p>วิทยาลัยเทคนิคนครศรีธรรมราชมุ่งผลิตกำลังคนอาชีวศึกษาที่มีสมรรถนะ สอดคล้องความต้องการของพื้นที่และภาคอุตสาหกรรม ด้วยหลักสูตรทันสมัยและความร่วมมือสถานประกอบการ.</p>
-    <p>ที่ตั้ง: 263 ถนนราชดำเนิน ตำบลท่าวัง อำเภอเมืองนครศรีธรรมราช 80000 • โทร 075-356-062 • อีเมล: saraban@tnk.ac.th</p>
-  </div>
-</section>  <footer class="site-footer">
+  </header>
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <p class="eyebrow">เกี่ยวกับ TNK</p>
+        <h1>ข้อมูลพื้นฐาน</h1>
+        <p class="lead">วิทยาลัยเทคนิคนครศรีธรรมราชมุ่งผลิตกำลังคนอาชีวศึกษาที่มีสมรรถนะ สอดคล้องความต้องการของพื้นที่และภาคอุตสาหกรรม ด้วยหลักสูตรทันสมัยและเครือข่ายความร่วมมือสถานประกอบการ.</p>
+        <div class="hero-actions">
+          <a class="btn" href="./contact.html">เยี่ยมชมวิทยาลัย</a>
+          <a class="btn btn-outline" href="./news.html">ดูข่าวล่าสุด</a>
+        </div>
+        <div class="stat-row">
+          <div class="stat">
+            <span class="stat-number">1965</span>
+            <span class="stat-label">ปีที่ก่อตั้ง</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">35+</span>
+            <span class="stat-label">หลักสูตร/สาขา</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">120+</span>
+            <span class="stat-label">คู่ความร่วมมือ</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container detail-grid">
+        <article class="detail-card">
+          <h3>พันธกิจและบทบาท</h3>
+          <p>ขับเคลื่อนการศึกษาด้านอาชีวะด้วยหลักสูตรที่ยืดหยุ่น รองรับการเติบโตของอุตสาหกรรมท้องถิ่นและเศรษฐกิจดิจิทัล.</p>
+          <ul class="checklist">
+            <li>พัฒนาผู้เรียนให้มีสมรรถนะและคุณลักษณะอันพึงประสงค์</li>
+            <li>ยกระดับทักษะดิจิทัลและภาษาเพื่อแข่งขันในตลาดงาน</li>
+            <li>สร้างความร่วมมือกับสถานประกอบการและชุมชน</li>
+            <li>บริหารจัดการด้วยหลักธรรมาภิบาล โปร่งใส ตรวจสอบได้</li>
+          </ul>
+        </article>
+        <article class="detail-card accent">
+          <h3>ข้อมูลติดต่อด่วน</h3>
+          <p>263 ถนนราชดำเนิน ตำบลท่าวัง อำเภอเมืองนครศรีธรรมราช 80000</p>
+          <p>โทร 075-356-062<br>อีเมล saraban@tnk.ac.th</p>
+          <small>เปิดทำการ จันทร์–ศุกร์ 08:30–16:30 น.</small>
+        </article>
+      </div>
+    </section>
+
+    <section class="section section-muted">
+      <div class="container resource-grid">
+        <article class="resource-card">
+          <h4>ประวัติและรากฐาน</h4>
+          <p>เรื่องราวการพัฒนาวิทยาลัยตั้งแต่เริ่มก่อตั้งจนถึงปัจจุบัน.</p>
+          <a href="./news.html">อ่านเรื่องราว</a>
+        </article>
+        <article class="resource-card">
+          <h4>แผนกลยุทธ์ 2568–2570</h4>
+          <p>เป้าหมายและตัวชี้วัดที่ใช้ยกระดับคุณภาพการศึกษา.</p>
+          <a href="#">ดาวน์โหลดเอกสาร</a>
+        </article>
+        <article class="resource-card">
+          <h4>บริการสำหรับชุมชน</h4>
+          <p>ศูนย์ซ่อมสร้างเพื่อชุมชน การบริการวิชาชีพ และโครงการจิตอาสา.</p>
+          <a href="./contact.html">จองคิวบริการ</a>
+        </article>
+      </div>
+      <div class="container cta-banner" style="margin-top:24px">
+        <div>
+          <h3>ต้องการข้อมูลเชิงลึกเพิ่มเติม?</h3>
+          <p>ติดต่อฝ่ายแผนงานและความร่วมมือเพื่อรับรายงานหรือขอเข้าพบผู้บริหาร.</p>
+        </div>
+        <a class="btn" href="mailto:saraban@tnk.ac.th">ส่งอีเมล</a>
+      </div>
+    </section>
+  </main>
+  <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <div class="brand-line">
