--- a/academics.html
+++ b/academics.html
@@ -43,17 +43,84 @@
         </ul>
       </nav>
     </div>
-  </header>  <section class="section">
-  <div class="container">
-    <h1>หลักสูตรการเรียนการสอน</h1>
-    <p>จัดการเรียนการสอนตั้งแต่ระดับประกาศนียบัตรวิชาชีพ (ปวช.) ถึงประกาศนียบัตรวิชาชีพชั้นสูง (ปวส.) เน้นทักษะจริง บูรณาการโครงงาน และฝึกประสบการณ์วิชาชีพ.</p>
-    <ul>
-      <li>ปวช.: พื้นฐานวิชาชีพและทักษะปฏิบัติ</li>
-      <li>ปวส.: เชี่ยวชาญเชิงลึก พร้อมทำงาน</li>
-      <li>ทวิภาคี: เรียนควบคู่ทำงานกับสถานประกอบการ</li>
-    </ul>
-  </div>
-</section>  <footer class="site-footer">
+  </header>
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <p class="eyebrow">Academic Programs</p>
+        <h1>หลักสูตรการเรียนการสอน</h1>
+        <p class="lead">พัฒนาศักยภาพผู้เรียนตั้งแต่ระดับ ปวช. จนถึง ปวส. พร้อมเลือกเส้นทางทวิภาคีและหลักสูตรเฉพาะทางที่ตอบโจทย์อุตสาหกรรม.</p>
+        <div class="hero-actions">
+          <a class="btn" href="./voc.html">สำรวจ ปวช.</a>
+          <a class="btn btn-outline" href="./high-voc.html">ดู ปวส.</a>
+        </div>
+        <div class="stat-row">
+          <div class="stat">
+            <span class="stat-number">3</span>
+            <span class="stat-label">เส้นทางหลัก</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">18</span>
+            <span class="stat-label">สาขาวิชา</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">1,200+</span>
+            <span class="stat-label">คู่ฝึกงาน</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container detail-grid">
+        <article class="detail-card">
+          <h3>โครงสร้างการเรียนรู้</h3>
+          <p>หลักสูตรออกแบบตามมาตรฐาน สอศ. บูรณาการการเรียนรู้ในห้องเรียนกับโครงงานและทักษะจริง.</p>
+          <ul class="checklist">
+            <li>รายวิชาแกนกลาง + รายวิชาเฉพาะทางทันสมัย</li>
+            <li>ฝึกปฏิบัติในห้องปฏิบัติการและศูนย์ความเป็นเลิศ</li>
+            <li>ฝึกงาน/สหกิจร่วมกับสถานประกอบการพันธมิตร</li>
+            <li>ระบบประเมินผลสมรรถนะและแฟ้มสะสมงานดิจิทัล</li>
+          </ul>
+        </article>
+        <article class="detail-card accent">
+          <h3>รอบรับสมัคร 2569</h3>
+          <p>รอบโควตา | กุมภาพันธ์<br>รอบปกติ | มีนาคม–เมษายน<br>รับตรงเพิ่มเติม | มิถุนายน</p>
+          <small>ติดต่อฝ่ายวิชาการ โทร 075-356-062 ต่อ 122</small>
+        </article>
+      </div>
+    </section>
+
+    <section class="section section-muted">
+      <div class="container resource-grid">
+        <article class="resource-card">
+          <h4>ประกาศนียบัตรวิชาชีพ (ปวช.)</h4>
+          <p>ปูพื้นฐานวิชาชีพและทักษะปฏิบัติให้พร้อมก้าวสู่สายงาน.</p>
+          <a href="./voc.html">รายละเอียด</a>
+        </article>
+        <article class="resource-card">
+          <h4>ประกาศนียบัตรวิชาชีพชั้นสูง (ปวส.)</h4>
+          <p>ต่อยอดความเชี่ยวชาญเชิงลึก พร้อมทำงานหรือศึกษาต่อ.</p>
+          <a href="./high-voc.html">รายละเอียด</a>
+        </article>
+        <article class="resource-card">
+          <h4>ระบบทวิภาคี</h4>
+          <p>เรียนรู้ควบคู่การทำงานกับสถานประกอบการพันธมิตร.</p>
+          <a href="./coop.html">รายละเอียด</a>
+        </article>
+      </div>
+      <div class="container cta-wrapper">
+        <div class="cta-banner">
+          <div>
+            <h3>มีคำถามเกี่ยวกับหลักสูตร?</h3>
+            <p>ทีม Academic Coach พร้อมช่วยวางแผนการเรียนและเส้นทางอาชีพ.</p>
+          </div>
+          <a class="btn" href="mailto:academic@tnk.ac.th">นัดหมายที่ปรึกษา</a>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <div class="brand-line">
