--- a/contact.html
+++ b/contact.html
@@ -43,14 +43,81 @@
         </ul>
       </nav>
     </div>
-  </header>  <section class="section">
-  <div class="container">
-    <h1>ติดต่อเรา</h1>
-    <p>ที่อยู่: 263 ถนนราชดำเนิน ตำบลท่าวัง อำเภอเมืองนครศรีธรรมราช 80000</p>
-    <p>โทรศัพท์: 075-356-062 • อีเมล: saraban@tnk.ac.th</p>
-    <p>เปิดทำการ: จันทร์–ศุกร์ เวลา 08:30–16:30 น.</p>
-  </div>
-</section>  <footer class="site-footer">
+  </header>
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <p class="eyebrow">Contact TNK</p>
+        <h1>ติดต่อวิทยาลัย</h1>
+        <p class="lead">สอบถามข้อมูลการสมัคร การจัดซื้อ การประสานงานโครงการ หรือแจ้งเหตุเร่งด่วน ผ่านช่องทางที่สะดวกได้ทุกวันทำการ.</p>
+        <div class="hero-actions">
+          <a class="btn" href="tel:075356062">โทร 075-356-062</a>
+          <a class="btn btn-outline" href="mailto:saraban@tnk.ac.th">ส่งอีเมล</a>
+        </div>
+        <div class="stat-row">
+          <div class="stat">
+            <span class="stat-number">08:30–16:30</span>
+            <span class="stat-label">เวลาทำการ</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">5</span>
+            <span class="stat-label">ช่องทางหลัก</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container detail-grid">
+        <article class="detail-card">
+          <h3>สำนักงานวิทยาลัย</h3>
+          <p>263 ถนนราชดำเนิน ตำบลท่าวัง อำเภอเมืองนครศรีธรรมราช 80000</p>
+          <ul class="checklist">
+            <li>งานทะเบียน–วัดผล: ต่อ 113, reg@tnk.ac.th</li>
+            <li>งานวิชาการ/รับสมัคร: ต่อ 122, academic@tnk.ac.th</li>
+            <li>งานจัดซื้อจัดจ้าง: ต่อ 205, procure@tnk.ac.th</li>
+            <li>งานความร่วมมือ/ทวิภาคี: ต่อ 302, coop@tnk.ac.th</li>
+          </ul>
+        </article>
+        <article class="detail-card accent">
+          <h3>เวลาทำการ</h3>
+          <p>จันทร์–ศุกร์ 08:30–16:30 น.<br>หยุดเสาร์–อาทิตย์ และวันหยุดนักขัตฤกษ์</p>
+          <p>Line Official: @tnkcollege<br>Facebook: วิทยาลัยเทคนิคนครศรีธรรมราช</p>
+          <small>กรณีฉุกเฉินนอกเวลาราชการ โทร 081-000-0000</small>
+        </article>
+      </div>
+    </section>
+
+    <section class="section section-muted">
+      <div class="container resource-grid">
+        <article class="resource-card">
+          <h4>แบบฟอร์มติดต่อราชการ</h4>
+          <p>ยื่นคำร้อง เอกสารรับรองผล หรือขอหนังสือรับรอง.</p>
+          <a href="#">ดาวน์โหลดแบบฟอร์ม</a>
+        </article>
+        <article class="resource-card">
+          <h4>แผนที่และการเดินทาง</h4>
+          <p>Google Maps และข้อมูลขนส่งสาธารณะ.</p>
+          <a href="https://maps.app.goo.gl/Jt5tq7HnFdEoa5pm6" target="_blank" rel="noopener">เปิดแผนที่</a>
+        </article>
+        <article class="resource-card">
+          <h4>จองคิวเข้าพบ</h4>
+          <p>นัดหมายเยี่ยมชม สัมภาษณ์ หรือเจรจาธุรกิจ.</p>
+          <a href="mailto:contact@tnk.ac.th">จองล่วงหน้า</a>
+        </article>
+      </div>
+      <div class="container cta-wrapper">
+        <div class="cta-banner">
+          <div>
+            <h3>ต้องการความช่วยเหลือเร่งด่วน?</h3>
+            <p>โทร 075-356-062 ต่อ 0 แล้วแจ้งแม่บ้านเวร เพื่อเชื่อมสายไปยังผู้บริหารเวร.</p>
+          </div>
+          <a class="btn" href="tel:075356062">โทรตอนนี้</a>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <div class="brand-line">
