--- a/coop.html
+++ b/coop.html
@@ -43,13 +43,84 @@
         </ul>
       </nav>
     </div>
-  </header>  <section class="section">
-  <div class="container">
-    <h1>ทวิภาคี</h1>
-    <p>ระบบทวิภาคีผสานการเรียนในสถานศึกษาและสถานประกอบการ ผู้เรียนได้รับประสบการณ์จริง สร้างผลงาน และมีโอกาสบรรจุงานต่อเนื่อง.</p>
-    <p>จัดทำแผนฝึกประสบการณ์ร่วมกับคู่ความร่วมมือ พร้อมผู้ควบคุมการฝึก.</p>
-  </div>
-</section>  <footer class="site-footer">
+  </header>
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <p class="eyebrow">Dual Program</p>
+        <h1>ระบบทวิภาคี TNK</h1>
+        <p class="lead">เรียนรู้ควบคู่การทำงานจริงกับกว่า 180 สถานประกอบการพันธมิตร ครอบคลุมอุตสาหกรรมยานยนต์ ไฟฟ้า อิเล็กทรอนิกส์ โลจิสติกส์ และดิจิทัล.</p>
+        <div class="hero-actions">
+          <a class="btn" href="./contact.html">สมัครเป็นคู่ความร่วมมือ</a>
+          <a class="btn btn-outline" href="./voc.html">ข้อมูลหลักสูตร</a>
+        </div>
+        <div class="stat-row">
+          <div class="stat">
+            <span class="stat-number">1,000+</span>
+            <span class="stat-label">นักศึกษาต่อปี</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">89%</span>
+            <span class="stat-label">โอกาสบรรจุงาน</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">180+</span>
+            <span class="stat-label">สถานประกอบการ</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container detail-grid">
+        <article class="detail-card">
+          <h3>โครงสร้างการฝึก</h3>
+          <p>แผนการฝึกทำงานร่วมกับสถานประกอบการ ออกแบบให้ผู้เรียนสะสมสมรรถนะครบทุกด้าน.</p>
+          <ul class="checklist">
+            <li>เรียนทฤษฎี 2 วัน / ปฏิบัติงาน 3 วัน</li>
+            <li>ผู้ควบคุมการฝึกจากสถานประกอบการ + ครูพี่เลี้ยง</li>
+            <li>รายงานความก้าวหน้าแบบดิจิทัลและแฟ้มสะสมงาน</li>
+            <li>ประเมินร่วม 3 ฝ่าย: ผู้เรียน ครู สถานประกอบการ</li>
+          </ul>
+        </article>
+        <article class="detail-card accent">
+          <h3>Timeline ปีการศึกษา 2569</h3>
+          <p>พ.ย.–ม.ค. | Matching Partner<br>ก.พ. | ปฐมนิเทศ/ฝึกอบรมเตรียมความพร้อม<br>มี.ค.–ก.ย. | ฝึกประสบการณ์</p>
+          <small>สอบถามงานความร่วมมือ โทร 075-356-062 ต่อ 302</small>
+        </article>
+      </div>
+    </section>
+
+    <section class="section section-muted">
+      <div class="container resource-grid">
+        <article class="resource-card">
+          <h4>คู่มือทวิภาคี</h4>
+          <p>ขั้นตอนการสมัคร การจัดทำ MOU และแบบประเมิน.</p>
+          <a href="#">ดาวน์โหลด PDF</a>
+        </article>
+        <article class="resource-card">
+          <h4>รายชื่อคู่ความร่วมมือ</h4>
+          <p>อัปเดตล่าสุด แบ่งตามอุตสาหกรรมและพื้นที่.</p>
+          <a href="#">เปิดดูรายชื่อ</a>
+        </article>
+        <article class="resource-card">
+          <h4>แจ้งประเด็นเร่งด่วน</h4>
+          <p>ช่องทางแจ้งเหตุความปลอดภัย/การดูแลผู้เรียนระหว่างฝึกงาน.</p>
+          <a href="mailto:coop@tnk.ac.th">แจ้งเหตุ</a>
+        </article>
+      </div>
+      <div class="container cta-wrapper">
+        <div class="cta-banner">
+          <div>
+            <h3>อยากยกระดับทักษะทีมงาน?</h3>
+            <p>สถานประกอบการสามารถอบรมครูฝึกและร่วมพัฒนาหลักสูตรเฉพาะทาง.</p>
+          </div>
+          <a class="btn" href="./contact.html">นัดประชุมออนไลน์</a>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <div class="brand-line">
