--- a/grades.html
+++ b/grades.html
@@ -43,13 +43,80 @@
         </ul>
       </nav>
     </div>
-  </header>  <section class="section">
-  <div class="container">
-    <h1>ตรวจผลการเรียน</h1>
-    <p>เข้าสู่ระบบเพื่อดูผลการเรียน รายวิชาที่ลงทะเบียน และสถานะหน่วยกิต.</p>
-    <a class="btn btn-outline" href="#">เข้าสู่ระบบนักเรียน–นักศึกษา</a>
-  </div>
-</section>  <footer class="site-footer">
+  </header>
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <p class="eyebrow">Student Portal</p>
+        <h1>ตรวจผลการเรียนออนไลน์</h1>
+        <p class="lead">เช็กผลการเรียน รายวิชาที่ลงทะเบียน และสถานะหน่วยกิตได้ตลอด 24 ชั่วโมง ผ่านระบบบริการนักเรียน–นักศึกษา.</p>
+        <div class="hero-actions">
+          <a class="btn" href="#">เข้าสู่ระบบนักเรียน</a>
+          <a class="btn btn-outline" href="./contact.html">ขอความช่วยเหลือ</a>
+        </div>
+        <div class="stat-row">
+          <div class="stat">
+            <span class="stat-number">24/7</span>
+            <span class="stat-label">เปิดให้บริการ</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">2FA</span>
+            <span class="stat-label">ความปลอดภัย</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container detail-grid">
+        <article class="detail-card">
+          <h3>ขั้นตอนการใช้งาน</h3>
+          <p>เตรียมข้อมูลให้พร้อมเพื่อเข้าสู่ระบบได้รวดเร็ว.</p>
+          <ul class="checklist">
+            <li>ใช้เลขประจำตัวนักเรียน/นักศึกษา และรหัสผ่านที่ได้รับ</li>
+            <li>อัปเดตเบอร์โทร/อีเมลเพื่อรับ OTP</li>
+            <li>ดาวน์โหลดผลการเรียนเป็นไฟล์ PDF ได้ทันที</li>
+            <li>แจ้งแก้ไขข้อมูลภายใน 7 วันหลังประกาศผล</li>
+          </ul>
+        </article>
+        <article class="detail-card accent">
+          <h3>ศูนย์ช่วยเหลือ</h3>
+          <p>งานทะเบียน–วัดผล โทร 075-356-062 ต่อ 113<br>Line OA: @tnkreg</p>
+          <small>ให้บริการวันทำการ 08:30–16:30 น.</small>
+        </article>
+      </div>
+    </section>
+
+    <section class="section section-muted">
+      <div class="container resource-grid">
+        <article class="resource-card">
+          <h4>คู่มือผู้ใช้ระบบ</h4>
+          <p>รวมคำถามที่พบบ่อยและการแก้ปัญหาพื้นฐาน.</p>
+          <a href="#">อ่านคู่มือ</a>
+        </article>
+        <article class="resource-card">
+          <h4>ขอสำเนาใบรายงานผล</h4>
+          <p>ส่งคำร้องออนไลน์และติดตามสถานะ.</p>
+          <a href="#">ยื่นคำร้อง</a>
+        </article>
+        <article class="resource-card">
+          <h4>ตารางลงทะเบียนล่วงหน้า</h4>
+          <p>แจ้งกำหนดการลงทะเบียนภาคเรียนถัดไป.</p>
+          <a href="./timetable.html">ตรวจสอบ</a>
+        </article>
+      </div>
+      <div class="container cta-wrapper">
+        <div class="cta-banner">
+          <div>
+            <h3>ลืมรหัสผ่าน?</h3>
+            <p>ยืนยันตัวตนด้วยบัตรประชาชน/บัตรนักศึกษา แล้วติดต่อเจ้าหน้าที่เพื่อรีเซ็ต.</p>
+          </div>
+          <a class="btn" href="mailto:reg@tnk.ac.th">แจ้งรีเซ็ต</a>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <div class="brand-line">
