--- a/high-voc.html
+++ b/high-voc.html
@@ -43,13 +43,70 @@
         </ul>
       </nav>
     </div>
-  </header>  <section class="section">
-  <div class="container">
-    <h1>ประกาศนียบัตรวิชาชีพชั้นสูง (ปวส.)</h1>
-    <p>ต่อยอดความรู้สู่ความเชี่ยวชาญเชิงลึก เน้นโครงงานอุตสาหกรรม มาตรฐานวิชาชีพ และความพร้อมสู่ตลาดแรงงาน.</p>
-    <p>มีฝึกงาน/สหกิจศึกษา และงานวิจัยประยุกต์ร่วมกับสถานประกอบการ.</p>
-  </div>
-</section>  <footer class="site-footer">
+  </header>
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <p class="eyebrow">Advanced Diploma</p>
+        <h1>ประกาศนียบัตรวิชาชีพชั้นสูง (ปวส.)</h1>
+        <p class="lead">ต่อยอดความรู้สู่ความเชี่ยวชาญเชิงลึก เน้นโครงงานอุตสาหกรรม มาตรฐานวิชาชีพ และความพร้อมสู่ตลาดแรงงาน.</p>
+        <div class="hero-actions">
+          <a class="btn" href="./academics.html">ดูโครงสร้างรายวิชา</a>
+          <a class="btn btn-outline" href="./coop.html">ระบบทวิภาคี</a>
+        </div>
+        <div class="stat-row">
+          <div class="stat">
+            <span class="stat-number">2 ปี</span>
+            <span class="stat-label">ระยะเวลาเรียน</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">95%</span>
+            <span class="stat-label">พร้อมทำงาน</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container detail-grid">
+        <article class="detail-card">
+          <h3>จุดเด่นหลักสูตร</h3>
+          <ul class="checklist">
+            <li>โครงงานร่วมกับภาคอุตสาหกรรม</li>
+            <li>อาจารย์พี่เลี้ยงจากสถานประกอบการ</li>
+            <li>หลักสูตรสหกิจศึกษา 4–6 เดือน</li>
+            <li>เตรียมสอบมาตรฐานวิชาชีพ/ใบอนุญาต</li>
+          </ul>
+        </article>
+        <article class="detail-card accent">
+          <h3>สายอาชีพต่อยอด</h3>
+          <p>ช่างเทคนิคขั้นสูง, เจ้าหน้าที่ซ่อมบำรุง, เจ้าหน้าที่ออกแบบระบบ, Start-up ด้านเทคโนโลยี.</p>
+          <small>โอนย้ายหน่วยกิตต่อระดับปริญญาตรีสายเทคโนโลยีได้</small>
+        </article>
+      </div>
+    </section>
+
+    <section class="section section-muted">
+      <div class="container resource-grid">
+        <article class="resource-card">
+          <h4>ผลงานนักศึกษา</h4>
+          <p>โครงงาน IoT, ระบบ EV, หุ่นยนต์บริการ, Digital Manufacturing.</p>
+          <a href="#">ชมผลงาน</a>
+        </article>
+        <article class="resource-card">
+          <h4>รายชื่อบริษัทคู่สหกิจ</h4>
+          <p>อุตสาหกรรมยานยนต์ ไฟฟ้า โลจิสติกส์ และดิจิทัล.</p>
+          <a href="#">ดูรายชื่อ</a>
+        </article>
+        <article class="resource-card">
+          <h4>ทุนต่อเนื่อง ปวส.</h4>
+          <p>ทุนกยศ./กรอ. ทุนทวิภาคี และทุนสนับสนุนผลงาน.</p>
+          <a href="#">ข้อมูลทุน</a>
+        </article>
+      </div>
+    </section>
+  </main>
+  <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <div class="brand-line">
