--- a/index.html
+++ b/index.html
@@ -44,83 +44,145 @@
       </nav>
     </div>
   </header>
-
-  <section class="hero">
-    <div class="container hero-inner">
-      <div class="hero-content">
-        <h1>สร้างคนอาชีพ สู่อนาคตที่ยั่งยืน</h1>
-        <p>พัฒนาศักยภาพนักเรียน–นักศึกษา ด้วยหลักสูตรที่ทันสมัย ความร่วมมือสถานประกอบการ และคุณภาพตามมาตรฐานอาชีวศึกษา</p>
-        <div class="hero-actions">
-          <a class="btn" href="./news.html">ดูข่าวล่าสุด</a>
-          <a class="btn btn-outline" href="./academics.html">สำรวจหลักสูตร</a>
+  <main>
+    <section class="hero">
+      <div class="container hero-inner">
+        <div class="hero-content">
+          <h1>สร้างคนอาชีพ สู่อนาคตที่ยั่งยืน</h1>
+          <p>พัฒนาศักยภาพนักเรียน–นักศึกษา ด้วยหลักสูตรที่ทันสมัย ความร่วมมือสถานประกอบการ และคุณภาพตามมาตรฐานอาชีวศึกษา</p>
+          <div class="hero-actions">
+            <a class="btn" href="./news.html">ดูข่าวล่าสุด</a>
+            <a class="btn btn-outline" href="./academics.html">สำรวจหลักสูตร</a>
+          </div>
+          <div class="stat-row">
+            <div class="stat">
+              <span class="stat-number">4K+</span>
+              <span class="stat-label">นักเรียน–นักศึกษา</span>
+            </div>
+            <div class="stat">
+              <span class="stat-number">120+</span>
+              <span class="stat-label">คู่ความร่วมมือ</span>
+            </div>
+            <div class="stat">
+              <span class="stat-number">96%</span>
+              <span class="stat-label">มีงานทำ/ศึกษาต่อ</span>
+            </div>
+          </div>
+        </div>
+        <div class="hero-media">
+          <img src="tnk-hero.jpg.jpg" alt="Campus" class="hero-img">
         </div>
       </div>
-      <div class="hero-media">
-        <img src="tnk-hero.jpg" alt="Campus" class="hero-img">
+    </section>
+
+    <section class="quick-links">
+      <div class="container grid-4">
+        <a class="tile" href="./timetable.html"><span>ตารางเรียน</span></a>
+        <a class="tile" href="./grades.html"><span>ตรวจผลการเรียน</span></a>
+        <a class="tile" href="./rms.html"><span>ระบบ RMS</span></a>
+        <a class="tile" href="./ita.html"><span>ITA 2569</span></a>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="quick-links">
-    <div class="container grid-4">
-      <a class="tile" href="./timetable.html"><span>ตารางเรียน</span></a>
-      <a class="tile" href="./grades.html"><span>ตรวจผลการเรียน</span></a>
-      <a class="tile" href="./rms.html"><span>ระบบ RMS</span></a>
-      <a class="tile" href="./ita.html"><span>ITA 2569</span></a>
-    </div>
-  </section>
+    <section class="section">
+      <div class="container section-head">
+        <h2>ข่าวประชาสัมพันธ์</h2>
+        <a class="link-more" href="./news.html">ดูทั้งหมด</a>
+      </div>
+      <div class="container grid-3">
+        <article class="card">
+          <img src="../..//images.jpg" alt="" class="card-img">
+          <div class="card-body">
+            <h3 class="card-title">กิจกรรมวิทยาลัย เดือนตุลาคม 2568</h3>
+            <p class="card-meta">29 ต.ค. 2568</p>
+            <a class="card-link" href="./news.html">อ่านต่อ</a>
+          </div>
+        </article>
+        <article class="card">
+          <img src="../..//l1.jpg" alt="" class="card-img">
+          <div class="card-body">
+            <h3 class="card-title">ประกาศรับสมัครครูอัตราจ้าง</h3>
+            <p class="card-meta">7 มี.ค. 2567</p>
+            <a class="card-link" href="./news.html">อ่านต่อ</a>
+          </div>
+        </article>
+        <article class="card">
+          <img src="../..//istockphoto-960310702-612x612.jpg" alt="" class="card-img">
+          <div class="card-body">
+            <h3 class="card-title">รายชื่อผู้ผ่านการเลือกสรรพนักงานราชการ</h3>
+            <p class="card-meta">23 ส.ค. 2566</p>
+            <a class="card-link" href="./news.html">อ่านต่อ</a>
+          </div>
+        </article>
+      </div>
+    </section>
 
-  <section class="section">
-    <div class="container section-head">
-      <h2>ข่าวประชาสัมพันธ์</h2>
-      <a class="link-more" href="./news.html">ดูทั้งหมด</a>
-    </div>
-    <div class="container grid-3">
-      <article class="card">
-        <img src="../..//images.jpg" alt="" class="card-img">
-        <div class="card-body">
-          <h3 class="card-title">กิจกรรมวิทยาลัย เดือนตุลาคม 2568</h3>
-          <p class="card-meta">29 ต.ค. 2568</p>
-          <a class="card-link" href="./news.html">อ่านต่อ</a>
-        </div>
-      </article>
-      <article class="card">
-        <img src="../..//l1.jpg" alt="" class="card-img">
-        <div class="card-body">
-          <h3 class="card-title">ประกาศรับสมัครครูอัตราจ้าง</h3>
-          <p class="card-meta">7 มี.ค. 2567</p>
-          <a class="card-link" href="./news.html">อ่านต่อ</a>
-        </div>
-      </article>
-      <article class="card">
-        <img src="../..//istockphoto-960310702-612x612.jpg" alt="" class="card-img">
-        <div class="card-body">
-          <h3 class="card-title">รายชื่อผู้ผ่านการเลือกสรรพนักงานราชการ</h3>
-          <p class="card-meta">23 ส.ค. 2566</p>
-          <a class="card-link" href="./news.html">อ่านต่อ</a>
-        </div>
-      </article>
-    </div>
-  </section>
+    <section class="section section-muted">
+      <div class="container section-head">
+        <h2>ข่าวจัดซื้อ–จัดจ้าง</h2>
+        <a class="link-more" href="./procure.html">ดูทั้งหมด</a>
+      </div>
+      <div class="container grid-2">
+        <article class="list-card">
+          <h3 class="list-title">ร่าง ประกาศซื้อคอมพิวเตอร์ All In One</h3>
+          <p class="list-meta">29 ต.ค. 2025 • e-bidding</p>
+          <a class="list-link" href="./procure.html">รายละเอียด</a>
+        </article>
+        <article class="list-card">
+          <h3 class="list-title">ร่าง ประกาศชุดฝึกยานยนต์ EV 6 สถานี</h3>
+          <p class="list-meta">14 ต.ค. 2025 • e-bidding</p>
+          <a class="list-link" href="./procure.html">รายละเอียด</a>
+        </article>
+      </div>
+    </section>
 
-  <section class="section section-muted">
-    <div class="container section-head">
-      <h2>ข่าวจัดซื้อ–จัดจ้าง</h2>
-      <a class="link-more" href="./procure.html">ดูทั้งหมด</a>
-    </div>
-    <div class="container grid-2">
-      <article class="list-card">
-        <h3 class="list-title">ร่าง ประกาศซื้อคอมพิวเตอร์ All In One</h3>
-        <p class="list-meta">29 ต.ค. 2025 • e-bidding</p>
-        <a class="list-link" href="./procure.html">รายละเอียด</a>
-      </article>
-      <article class="list-card">
-        <h3 class="list-title">ร่าง ประกาศชุดฝึกยานยนต์ EV 6 สถานี</h3>
-        <p class="list-meta">14 ต.ค. 2025 • e-bidding</p>
-        <a class="list-link" href="./procure.html">รายละเอียด</a>
-      </article>
-    </div>
-  </section>
+    <section class="section">
+      <div class="container detail-grid">
+        <article class="detail-card">
+          <h3>ภารกิจ TNK</h3>
+          <p>ยกระดับกำลังคนอาชีวะด้วยหลักสูตรฐานสมรรถนะ ห้องปฏิบัติการทันสมัย และครูผู้เชี่ยวชาญพร้อมประสบการณ์อุตสาหกรรม.</p>
+          <ul class="checklist">
+            <li>โครงงานและ Hackathon สายเทคนิค</li>
+            <li>Upskill ภาษาอังกฤษ/ดิจิทัล</li>
+            <li>ศูนย์ความร่วมมือกับสถานประกอบการ</li>
+            <li>สวัสดิการและทุนการศึกษาหลากหลาย</li>
+          </ul>
+        </article>
+        <article class="detail-card accent">
+          <h3>กำลังสมัคร?</h3>
+          <p>รอบโควต้าภายใน | ก.พ.<br>รอบปกติ | มี.ค.–เม.ย.<br>รอบเพิ่มเติม | มิ.ย.</p>
+          <small>งานแนะแนว โทร 075-356-062 ต่อ 145 • line: @tnkcoach</small>
+        </article>
+      </div>
+    </section>
+
+    <section class="section section-muted">
+      <div class="container resource-grid">
+        <article class="resource-card">
+          <h4>แนะนำสาขายอดนิยม</h4>
+          <p>IT, EV, Automation, Digital Business</p>
+          <a href="./academics.html">ดูรายละเอียด</a>
+        </article>
+        <article class="resource-card">
+          <h4>บริการสำหรับชุมชน</h4>
+          <p>ศูนย์ซ่อมสร้างเพื่อชุมชน และพัฒนาอาชีพ.</p>
+          <a href="./contact.html">จองคิว</a>
+        </article>
+        <article class="resource-card">
+          <h4>ดาวน์โหลดคู่มือผู้ปกครอง</h4>
+          <p>แนวทางดูแลและติดตามผลการเรียนอย่างใกล้ชิด.</p>
+          <a href="#">ดาวน์โหลด PDF</a>
+        </article>
+      </div>
+      <div class="container cta-banner" style="margin-top:24px">
+        <div>
+          <h3>อยากเยี่ยมชมวิทยาลัย?</h3>
+          <p>ทีมเจ้าหน้าที่พร้อมนำชมศูนย์การเรียนรู้และตอบทุกคำถาม.</p>
+        </div>
+        <a class="btn" href="./contact.html">จองรอบเยี่ยมชม</a>
+      </div>
+    </section>
+  </main>
 
   <footer class="site-footer" id="contact">
     <div class="container footer-grid">
