--- a/ita.html
+++ b/ita.html
@@ -43,13 +43,70 @@
         </ul>
       </nav>
     </div>
-  </header>  <section class="section">
-  <div class="container">
-    <h1>ITA 2569</h1>
-    <p>ข้อมูลการประเมินคุณธรรมและความโปร่งใส (Integrity & Transparency Assessment) เอกสารหลักฐาน และผลการประเมินประจำปี.</p>
-    <a class="btn btn-outline" href="#">ดูเอกสาร ITA</a>
-  </div>
-</section>  <footer class="site-footer">
+  </header>
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <p class="eyebrow">Integrity & Transparency</p>
+        <h1>ITA 2569</h1>
+        <p class="lead">เผยแพร่ข้อมูลการประเมินคุณธรรมและความโปร่งใส พร้อมหลักฐานตามเกณฑ์ สำนักงาน ป.ป.ช. ให้ประชาชนตรวจสอบได้.</p>
+        <div class="hero-actions">
+          <a class="btn" href="#">ดูเอกสาร ITA</a>
+          <a class="btn btn-outline" href="#">ผลคะแนนย้อนหลัง</a>
+        </div>
+        <div class="stat-row">
+          <div class="stat">
+            <span class="stat-number">98.70</span>
+            <span class="stat-label">คะแนนปี 2568</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">Top</span>
+            <span class="stat-label">ระดับจังหวัด</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container detail-grid">
+        <article class="detail-card">
+          <h3>หมวดข้อมูล</h3>
+          <ul class="checklist">
+            <li>G1-G3 ข้อมูลพื้นฐานและการดำเนินงาน</li>
+            <li>G4-G6 การบริหารจัดการและการให้บริการ</li>
+            <li>G7-G9 การเปิดเผยงบประมาณ/การเงิน</li>
+            <li>G10-G13 การมีส่วนร่วมและนวัตกรรม</li>
+          </ul>
+        </article>
+        <article class="detail-card accent">
+          <h3>ช่องทางร้องเรียน</h3>
+          <p>สายด่วน 075-356-062 ต่อ 104<br>อีเมล ita@tnk.ac.th • Line @tnkita</p>
+          <small>รับเรื่องภายใน 24 ชั่วโมงทำการ</small>
+        </article>
+      </div>
+    </section>
+
+    <section class="section section-muted">
+      <div class="container resource-grid">
+        <article class="resource-card">
+          <h4>คู่มือการประเมิน ITA</h4>
+          <p>สรุปเกณฑ์และแนวทางจัดเตรียมหลักฐานสำหรับหน่วยงาน.</p>
+          <a href="#">ดาวน์โหลด</a>
+        </article>
+        <article class="resource-card">
+          <h4>แบบสำรวจ OIT</h4>
+          <p>แบบสอบถามออนไลน์สำหรับบุคลากรและผู้รับบริการ.</p>
+          <a href="#">ทำแบบสำรวจ</a>
+        </article>
+        <article class="resource-card">
+          <h4>สรุปผลประจำปี</h4>
+          <p>ดูคะแนนเปรียบเทียบย้อนหลังพร้อมแนวทางพัฒนา.</p>
+          <a href="#">เปิดดู</a>
+        </article>
+      </div>
+    </section>
+  </main>
+  <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <div class="brand-line">
