--- a/library.html
+++ b/library.html
@@ -43,13 +43,70 @@
         </ul>
       </nav>
     </div>
-  </header>  <section class="section">
-  <div class="container">
-    <h1>ห้องสมุด</h1>
-    <p>บริการสืบค้นหนังสือ วารสาร และสื่อดิจิทัล พร้อมพื้นที่อ่านหนังสือและสนับสนุนการทำโครงงาน.</p>
-    <p>เวลาให้บริการ: จันทร์–ศุกร์ 08:30–16:30 น.</p>
-  </div>
-</section>  <footer class="site-footer">
+  </header>
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <p class="eyebrow">Learning Hub</p>
+        <h1>ห้องสมุด TNK</h1>
+        <p class="lead">ศูนย์ทรัพยากรความรู้ หนังสือ วารสาร สื่อดิจิทัล และ Makerspace สำหรับโครงงานนวัตกรรม.</p>
+        <div class="hero-actions">
+          <a class="btn" href="#">สืบค้นออนไลน์</a>
+          <a class="btn btn-outline" href="#">จองพื้นที่อ่านหนังสือ</a>
+        </div>
+        <div class="stat-row">
+          <div class="stat">
+            <span class="stat-number">25K+</span>
+            <span class="stat-label">เล่ม/รายการ</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">08:30–16:30</span>
+            <span class="stat-label">เวลาทำการ</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container detail-grid">
+        <article class="detail-card">
+          <h3>บริการหลัก</h3>
+          <ul class="checklist">
+            <li>สืบค้นหนังสือ/สื่อผ่าน OPAC</li>
+            <li>ยืม–คืนด้วยตนเองและแจ้งเตือนผ่าน LINE</li>
+            <li>Co-working + Makerspace สำหรับโครงงาน</li>
+            <li>บริการแนะนำการสืบค้นฐานข้อมูลออนไลน์</li>
+          </ul>
+        </article>
+        <article class="detail-card accent">
+          <h3>ติดต่อห้องสมุด</h3>
+          <p>โทร 075-356-062 ต่อ 402 • library@tnk.ac.th</p>
+          <small>รองรับการจองพื้นที่แบบกลุ่มล่วงหน้า 3 วัน</small>
+        </article>
+      </div>
+    </section>
+
+    <section class="section section-muted">
+      <div class="container resource-grid">
+        <article class="resource-card">
+          <h4>ฐานข้อมูลดิจิทัล</h4>
+          <p>ThaiLIS, IEEE Xplore, SpringerLink (สิทธิ์สำหรับครู/นักศึกษา).</p>
+          <a href="#">เข้าสู่ระบบ</a>
+        </article>
+        <article class="resource-card">
+          <h4>กิจกรรมเสริม</h4>
+          <p>Workshop การค้นคว้า การออกแบบเรซูเม่ และคลาสทำสื่อ.</p>
+          <a href="#">ลงทะเบียน</a>
+        </article>
+        <article class="resource-card">
+          <h4>แนะนำหนังสือใหม่</h4>
+          <p>ดูรายชื่อหนังสือเข้าห้องสมุดประจำเดือน.</p>
+          <a href="#">อ่านเพิ่มเติม</a>
+        </article>
+      </div>
+    </section>
+  </main>
+  <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <div class="brand-line">
