--- a/news.html
+++ b/news.html
@@ -43,13 +43,78 @@
         </ul>
       </nav>
     </div>
-  </header>  <section class="section">
-  <div class="container">
-    <h1>ข่าวประชาสัมพันธ์</h1>
-    <p>ติดตามข่าวกิจกรรมของวิทยาลัย ประกาศสำคัญ และผลงานนักเรียน–นักศึกษา อัปเดตอย่างต่อเนื่อง.</p>
-    <p><a href="#">ดูข่าวทั้งหมด</a> หรือเลือกหมวดหมู่ที่สนใจ.</p>
-  </div>
-</section>  <footer class="site-footer">
+  </header>
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <p class="eyebrow">TNK Newsroom</p>
+        <h1>ข่าวประชาสัมพันธ์</h1>
+        <p class="lead">ติดตามข่าวกิจกรรม ประกาศรับสมัคร และผลงานนักเรียน–นักศึกษา อัปเดตทุกสัปดาห์จากศูนย์สื่อสารองค์กร.</p>
+        <div class="hero-actions">
+          <a class="btn" href="#">ดูข่าวทั้งหมด</a>
+          <a class="btn btn-outline" href="./contact.html">ส่งข่าว/ประชาสัมพันธ์</a>
+        </div>
+        <div class="stat-row">
+          <div class="stat">
+            <span class="stat-number">50+</span>
+            <span class="stat-label">ข่าวต่อปี</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">12</span>
+            <span class="stat-label">หมวดหมู่</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container detail-grid">
+        <article class="detail-card">
+          <h3>ข่าวเด่น</h3>
+          <p>รวบรวมข่าวสำคัญที่เกี่ยวข้องกับการเรียน การประกวด และการบริการวิชาชีพ.</p>
+          <ul class="checklist">
+            <li>กิจกรรมเพื่อชุมชนและศูนย์ซ่อมสร้าง</li>
+            <li>ผลงานการแข่งขันทักษะวิชาชีพ</li>
+            <li>ประกาศทุนการศึกษาและรับสมัคร</li>
+            <li>ความร่วมมือกับสถานประกอบการ</li>
+          </ul>
+        </article>
+        <article class="detail-card accent">
+          <h3>ส่งข่าวให้เรา</h3>
+          <p>อีเมล pr@tnk.ac.th หรือ Line @tnkpr ภายใน 3 วันทำการก่อนเผยแพร่</p>
+          <small>แนบรูปภาพอย่างน้อย 1 รูป พร้อมข้อมูลติดต่อผู้ประสานงาน</small>
+        </article>
+      </div>
+    </section>
+
+    <section class="section section-muted">
+      <div class="container resource-grid">
+        <article class="resource-card">
+          <h4>เหตุการณ์สำคัญ</h4>
+          <p>พิธีมอบประกาศนียบัตร, งานวันวิชาการ, กิจกรรม CSR.</p>
+          <a href="#">อ่านข่าว</a>
+        </article>
+        <article class="resource-card">
+          <h4>ประกาศรับสมัคร</h4>
+          <p>รับนักเรียน นักศึกษา ครูอัตราจ้าง และโครงการพิเศษ.</p>
+          <a href="#">ดูประกาศ</a>
+        </article>
+        <article class="resource-card">
+          <h4>ผลการแข่งขัน</h4>
+          <p>ชนะเลิศทักษะวิชาชีพระดับภาคและระดับชาติ.</p>
+          <a href="#">ดูผลการแข่งขัน</a>
+        </article>
+      </div>
+      <div class="container cta-banner" style="margin-top:24px">
+        <div>
+          <h3>อยากให้ทีมข่าวไปถ่ายทำ?</h3>
+          <p>แจ้งรายละเอียดกิจกรรมล่วงหน้าอย่างน้อย 5 วัน เพื่อจองทีมงานและอุปกรณ์.</p>
+        </div>
+        <a class="btn" href="mailto:pr@tnk.ac.th">จองทีมข่าว</a>
+      </div>
+    </section>
+  </main>
+  <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <div class="brand-line">
