--- a/procure.html
+++ b/procure.html
@@ -43,16 +43,70 @@
         </ul>
       </nav>
     </div>
-  </header>  <section class="section">
-  <div class="container">
-    <h1>ข่าวจัดซื้อ–จัดจ้าง</h1>
-    <p>เผยแพร่ร่างประกาศ แผนการจัดซื้อ และผลการประกวดราคาตามระเบียบ ด้วยความโปร่งใส ตรวจสอบได้.</p>
-    <ul>
-      <li><a href="#">ร่าง ประกาศคอมพิวเตอร์ All In One</a></li>
-      <li><a href="#">ร่าง ชุดฝึกยานยนต์ EV 6 สถานี</a></li>
-    </ul>
-  </div>
-</section>  <footer class="site-footer">
+  </header>
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <p class="eyebrow">Procurement</p>
+        <h1>ข่าวจัดซื้อ–จัดจ้าง</h1>
+        <p class="lead">เผยแพร่ร่างประกาศ TOR แผนจัดซื้อ และผลการประกวดราคาอย่างโปร่งใส ตรวจสอบได้ตามระเบียบพัสดุภาครัฐ.</p>
+        <div class="hero-actions">
+          <a class="btn" href="#">ดาวน์โหลด TOR ล่าสุด</a>
+          <a class="btn btn-outline" href="./contact.html">ติดต่อเจ้าหน้าที่พัสดุ</a>
+        </div>
+        <div class="stat-row">
+          <div class="stat">
+            <span class="stat-number">100%</span>
+            <span class="stat-label">e-bidding</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">2569</span>
+            <span class="stat-label">ปีงบประมาณ</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container detail-grid">
+        <article class="detail-card">
+          <h3>ประกาศล่าสุด</h3>
+          <ul class="checklist">
+            <li><a href="#">ร่าง TOR คอมพิวเตอร์ All In One (29 ต.ค. 2568)</a></li>
+            <li><a href="#">ร่าง TOR ชุดฝึกยานยนต์ EV 6 สถานี (14 ต.ค. 2568)</a></li>
+            <li><a href="#">แผนจัดซื้อครุภัณฑ์ปี 2569</a></li>
+            <li><a href="#">ผลการประกวดราคาไตรมาส 4/2568</a></li>
+          </ul>
+        </article>
+        <article class="detail-card accent">
+          <h3>ติดต่อฝ่ายพัสดุ</h3>
+          <p>คุณศุภชัย โทร 075-356-062 ต่อ 208<br>อีเมล: procure@tnk.ac.th</p>
+          <small>เปิดทำการ จันทร์–ศุกร์ 08:30–16:30 น.</small>
+        </article>
+      </div>
+    </section>
+
+    <section class="section section-muted">
+      <div class="container resource-grid">
+        <article class="resource-card">
+          <h4>ดาวน์โหลดแบบฟอร์ม</h4>
+          <p>หนังสือแสดงเจตจำนง ใบเสนอราคา และแบบประเมิน.</p>
+          <a href="#">ดาวน์โหลด</a>
+        </article>
+        <article class="resource-card">
+          <h4>คู่มือผู้ประกอบการ</h4>
+          <p>ขั้นตอนลงทะเบียนในระบบ e-GP และข้อกำหนดสำคัญ.</p>
+          <a href="#">อ่านคู่มือ</a>
+        </article>
+        <article class="resource-card">
+          <h4>แจ้งข้อเสนอแนะ</h4>
+          <p>ส่งคำถามหรือข้อทักท้วงภายใน 3 วันทำการหลังประกาศ.</p>
+          <a href="mailto:procure@tnk.ac.th">ส่งอีเมล</a>
+        </article>
+      </div>
+    </section>
+  </main>
+  <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <div class="brand-line">
