--- a/rms.html
+++ b/rms.html
@@ -43,13 +43,70 @@
         </ul>
       </nav>
     </div>
-  </header>  <section class="section">
-  <div class="container">
-    <h1>ระบบ RMS</h1>
-    <p>ระบบบริหารจัดการงานวิทยาลัย สำหรับงานสารบรรณ งานบุคคล งานแผน และติดตามภารกิจหน่วยงานภายใน.</p>
-    <a class="btn btn-outline" href="#">เข้าสู่ระบบ RMS</a>
-  </div>
-</section>  <footer class="site-footer">
+  </header>
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <p class="eyebrow">TNK Digital Office</p>
+        <h1>ระบบ RMS</h1>
+        <p class="lead">ระบบบริหารจัดการงานวิทยาลัยสำหรับงานสารบรรณ งานบุคคล งานแผน และติดตามภารกิจทุกหน่วยในจุดเดียว.</p>
+        <div class="hero-actions">
+          <a class="btn" href="#">เข้าสู่ระบบ RMS</a>
+          <a class="btn btn-outline" href="./contact.html">ขอสิทธิ์การใช้งาน</a>
+        </div>
+        <div class="stat-row">
+          <div class="stat">
+            <span class="stat-number">24/7</span>
+            <span class="stat-label">พร้อมใช้งาน</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">2FA</span>
+            <span class="stat-label">ระบบความปลอดภัย</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container detail-grid">
+        <article class="detail-card">
+          <h3>ฟีเจอร์หลัก</h3>
+          <ul class="checklist">
+            <li>งานสารบรรณอิเล็กทรอนิกส์และเวิร์กโฟลว์อนุมัติ</li>
+            <li>บันทึกภารกิจ รายงานผล และแดชบอร์ดผู้บริหาร</li>
+            <li>จัดการแผนปฏิบัติราชการและโครงการลงทุน</li>
+            <li>ฐานข้อมูลบุคลากรและการลางานออนไลน์</li>
+          </ul>
+        </article>
+        <article class="detail-card accent">
+          <h3>ศูนย์ช่วยเหลือ RMS</h3>
+          <p>support@tnk.ac.th • โทร 075-356-062 ต่อ 503</p>
+          <small>เปิดบริการ 08:30–16:30 น. เว้นวันหยุดราชการ</small>
+        </article>
+      </div>
+    </section>
+
+    <section class="section section-muted">
+      <div class="container resource-grid">
+        <article class="resource-card">
+          <h4>คู่มือผู้ใช้</h4>
+          <p>ตั้งแต่การล็อกอินครั้งแรกถึงการอนุมัติเอกสาร.</p>
+          <a href="#">อ่านออนไลน์</a>
+        </article>
+        <article class="resource-card">
+          <h4>ฝึกอบรมการใช้งาน</h4>
+          <p>รอบออนไลน์ทุกวันพุธ และแบบ onsite สำหรับหน่วยงาน.</p>
+          <a href="#">ลงทะเบียน</a>
+        </article>
+        <article class="resource-card">
+          <h4>รายงานสถานะระบบ</h4>
+          <p>ติดตามการบำรุงรักษาและแจ้งปัญหาเร่งด่วน.</p>
+          <a href="#">ตรวจสอบ</a>
+        </article>
+      </div>
+    </section>
+  </main>
+  <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <div class="brand-line">
