--- a/timetable.html
+++ b/timetable.html
@@ -43,18 +43,60 @@
         </ul>
       </nav>
     </div>
-  </header>  <section class="section">
-  <div class="container">
-    <h1>ตารางเรียน</h1>
-    <p>ดาวน์โหลดตารางเรียนภาคเรียนปัจจุบันและย้อนหลังได้จากลิงก์ด้านล่าง.</p>
-    <ul>
-      <li><a href="#">ภาคเรียน 2/2568</a></li>
-      <li><a href="#">ภาคเรียน 1/2568</a></li>
-      <li><a href="#">ภาคเรียน 2/2567</a></li>
-      <li><a href="#">ภาคเรียน 1/2567</a></li>
-    </ul>
-  </div>
-</section>  <footer class="site-footer">
+  </header>
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <p class="eyebrow">Schedules</p>
+        <h1>ตารางเรียน</h1>
+        <p class="lead">ดาวน์โหลดตารางเรียนภาคเรียนล่าสุด และตรวจสอบการปรับเปลี่ยนห้องเรียนหรืออาจารย์ผู้สอนได้แบบเรียลไทม์.</p>
+        <div class="hero-actions">
+          <a class="btn" href="#">ดูตารางเรียนออนไลน์</a>
+          <a class="btn btn-outline" href="./contact.html">แจ้งปัญหา</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container detail-grid">
+        <article class="detail-card">
+          <h3>ไฟล์ตารางเรียน</h3>
+          <ul class="checklist">
+            <li><a href="#">ภาคเรียน 2/2568 (อัปเดต 15 พ.ย. 2568)</a></li>
+            <li><a href="#">ภาคเรียน 1/2568</a></li>
+            <li><a href="#">ภาคเรียน 2/2567</a></li>
+            <li><a href="#">ภาคเรียน 1/2567</a></li>
+          </ul>
+        </article>
+        <article class="detail-card accent">
+          <h3>ศูนย์ข้อมูลตารางเรียน</h3>
+          <p>งานวิชาการ โทร 075-356-062 ต่อ 122<br>Line OA: @tnkreg</p>
+          <small>แจ้งขอปรับตารางอย่างน้อย 3 วันทำการ</small>
+        </article>
+      </div>
+    </section>
+
+    <section class="section section-muted">
+      <div class="container resource-grid">
+        <article class="resource-card">
+          <h4>ปฏิทินการศึกษา</h4>
+          <p>สัปดาห์เรียน สอบกลางภาค ปลายภาค และวันหยุด.</p>
+          <a href="#">ดาวน์โหลด</a>
+        </article>
+        <article class="resource-card">
+          <h4>คู่มือครูที่ปรึกษา</h4>
+          <p>แนวทางดูแลการเข้าเรียนและการแจ้งเตือน.</p>
+          <a href="#">อ่านคู่มือ</a>
+        </article>
+        <article class="resource-card">
+          <h4>จองห้องปฏิบัติการ</h4>
+          <p>ระบบจองห้อง LAB/Smart Classroom ล่วงหน้า.</p>
+          <a href="#">เข้าสู่ระบบ</a>
+        </article>
+      </div>
+    </section>
+  </main>
+  <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <div class="brand-line">
