--- a/voc.html
+++ b/voc.html
@@ -43,13 +43,70 @@
         </ul>
       </nav>
     </div>
-  </header>  <section class="section">
-  <div class="container">
-    <h1>ประกาศนียบัตรวิชาชีพ (ปวช.)</h1>
-    <p>พัฒนาทักษะพื้นฐานด้านวิศวกรรมและเทคโนโลยีผ่านการปฏิบัติจริง เรียนรู้ความปลอดภัย เครื่องมือ และการแก้ปัญหาเชิงเทคนิค.</p>
-    <p>สาขาที่เปิดสอน: เทคโนโลยีสารสนเทศ • ช่างยนต์ • ช่างอิเล็กทรอนิกส์ • ช่างเชื่อมโลหะ</p>
-  </div>
-</section>  <footer class="site-footer">
+  </header>
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <p class="eyebrow">Programs</p>
+        <h1>ประกาศนียบัตรวิชาชีพ (ปวช.)</h1>
+        <p class="lead">วางรากฐานทักษะวิศวกรรม เทคโนโลยี และดิจิทัล ผ่านการเรียนแบบลงมือทำและโครงงานจริง.</p>
+        <div class="hero-actions">
+          <a class="btn" href="./academics.html">โครงสร้างหลักสูตร</a>
+          <a class="btn btn-outline" href="./contact.html">นัดหมายปรึกษา</a>
+        </div>
+        <div class="stat-row">
+          <div class="stat">
+            <span class="stat-number">3 ปี</span>
+            <span class="stat-label">ระยะเวลาเรียน</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">12</span>
+            <span class="stat-label">สาขาวิชา</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container detail-grid">
+        <article class="detail-card">
+          <h3>สาขาหลัก</h3>
+          <ul class="checklist">
+            <li>เทคโนโลยีสารสนเทศ / ดิจิทัล</li>
+            <li>ช่างยนต์และช่างยานยนต์ไฟฟ้า</li>
+            <li>ช่างอิเล็กทรอนิกส์และระบบอัตโนมัติ</li>
+            <li>ช่างเชื่อมโลหะ/ช่างไฟฟ้ากำลัง</li>
+          </ul>
+        </article>
+        <article class="detail-card accent">
+          <h3>แนวทางการเรียน</h3>
+          <p>เรียนทฤษฎีควบคู่ปฏิบัติ, โครงงานบูรณาการ, ฝึกงานกับสถานประกอบการท้องถิ่น.</p>
+          <small>รับผู้จบ ม.3 หรือเทียบเท่า</small>
+        </article>
+      </div>
+    </section>
+
+    <section class="section section-muted">
+      <div class="container resource-grid">
+        <article class="resource-card">
+          <h4>ใบสมัครออนไลน์</h4>
+          <p>กรอกข้อมูลและอัปโหลดเอกสารภายใน 5 นาที.</p>
+          <a href="#">เริ่มสมัคร</a>
+        </article>
+        <article class="resource-card">
+          <h4>ทุนการศึกษาปวช.</h4>
+          <p>ทุนอาชีวช่วยเหลือและทุนความสามารถพิเศษ.</p>
+          <a href="#">ดูรายละเอียด</a>
+        </article>
+        <article class="resource-card">
+          <h4>คู่มือผู้ปกครอง</h4>
+          <p>แนวทางสนับสนุนลูกหลานในสายอาชีพ.</p>
+          <a href="#">ดาวน์โหลด</a>
+        </article>
+      </div>
+    </section>
+  </main>
+  <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <div class="brand-line">
